0.12.2/_sources/gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_fast_ica.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/plot_fast_ica.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_fast_ica.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_fast_ica.py:


FastICA example
===============

.. GENERATED FROM PYTHON SOURCE LINES 14-15

Import the spectrochempy API package

.. GENERATED FROM PYTHON SOURCE LINES 15-17

.. code-block:: default

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 18-21

Independent component analysis (ICA) is a computational method for separating a multivariate signal such as spectra
into additive components. This is done by assuming that at most one subcomponent is Gaussian and that the
components are statistically independents from each other.

.. GENERATED FROM PYTHON SOURCE LINES 21-37

.. code-block:: default


    # Load, prepare and plot the dataset
    # ----------------------------------
    # Here we use a dataset from :cite:t:`jaumot:2005`

    X = scp.read("matlabdata/als2004dataset.MAT")[-1]

    X.title = "absorbance"
    X.units = "absorbance"
    X.y = scp.Coord.arange(
        X.shape[0], dtype="float", title="elution time"
    )  # floats to trigger sequential colormap
    X.y.units = "min"
    X.x.title = "wavelength"
    _ = X.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_001.png
   :alt: plot fast ica
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 38-43

Create and fit a FastICA object
-------------------------------

As argument of the object constructor we define log_level to ``"INFO"`` to
obtain verbose output during fit, and we set the number of component to use at 4.

.. GENERATED FROM PYTHON SOURCE LINES 43-47

.. code-block:: default


    ica = scp.FastICA(n_components=4, log_level="INFO")
    _ = ica.fit(X)








.. GENERATED FROM PYTHON SOURCE LINES 48-54

Get the mixing system and source spectral profiles
--------------------------------------------------

The mixing system :math:`A` and the source spectral profiles :math:`S^T` can
be obtained as follows (the Sklearn equivalents - also valid with Scpy - are
indicated as comments

.. GENERATED FROM PYTHON SOURCE LINES 54-58

.. code-block:: default


    A = ica.A  # or model.transform()
    St = ica.St  # or model.mixing.T








.. GENERATED FROM PYTHON SOURCE LINES 59-60

Plot them

.. GENERATED FROM PYTHON SOURCE LINES 60-65

.. code-block:: default



    _ = A.T.plot(title="Mixing System", colormap=None)
    _ = St.plot(title="Sources spectral profiles", colormap=None)




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_002.png
         :alt: Mixing System
         :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_002.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_003.png
         :alt: Sources spectral profiles
         :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_003.png
         :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 67-71

Reconstruct the dataset
-----------------------

The dataset can be reconstructed from these matrices and the mean:

.. GENERATED FROM PYTHON SOURCE LINES 71-75

.. code-block:: default


    X_hat_a = scp.dot(A, St) + X.mean(dim=0).data
    _ = X_hat_a.plot(title=r"$\hat{X} = \bar{X} + A S^t$")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_004.png
   :alt: $\hat{X} = \bar{X} + A S^t$
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 76-77

Or using the transform() method:

.. GENERATED FROM PYTHON SOURCE LINES 77-80

.. code-block:: default

    X_hat_b = ica.inverse_transform()
    _ = X_hat_b.plot(title=r"$\hat{X} =$ ica.inverse_transform()")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_005.png
   :alt: $\hat{X} =$ ica.inverse_transform()
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 81-82

Finally, the quality of the reconstriction can be checked by `plot_merit()`

.. GENERATED FROM PYTHON SOURCE LINES 82-84

.. code-block:: default


    _ = ica.plot_merit(nb_traces=15)



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_006.png
   :alt: plot fast ica
   :srcset: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/sphx_glr_plot_fast_ica_006.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 85-87

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 87-89

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.169 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_fast_ica.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_fast_ica.py <plot_fast_ica.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_fast_ica.ipynb <plot_fast_ica.ipynb>`
